更新接口学习内容

--- a/_posts/接口.md
+++ b/_posts/接口.md
@@ -104,7 +104,7 @@ public interface Interface1 {
 
 **于是**当我们添加了新的抽象方法后，原先的实现类都会报错，如下：
 
-![image-20240328225504325](image/image-20240328225504325.png)
+![image-20240328225504325](/images/image-20240328225504325.png)
 
 因此，为了不需要在升级接口后对所有的实现类进行修改，引入了**default**关键字，用于创建默认方法，创建方法为:
 
@@ -121,7 +121,7 @@ public interface Interface1 {
 
 我们发现使用了default就不会报错了
 
-![image-20240328230158633](image/image-20240328230158633.png)
+![image-20240328230158633](/images/image-20240328230158633.png)
 
 
 
@@ -195,7 +195,7 @@ public class interTest {
 
 - 结果：
 
-![image-20240328231208413](image/image-20240328231208413.png)
+![image-20240328231208413](/images/image-20240328231208413.png)
 
 
 
@@ -428,7 +428,7 @@ public class Test {
 
 结果为：
 
-![image-20240329134654043](image/image-20240329134654043.png)
+![image-20240329134654043](/images/image-20240329134654043.png)
 
 
 
@@ -511,6 +511,56 @@ public class InterClass implements MyInterZi{
 
 如果两个父接口有default默认方法重名了，那么子接口一定要重写该默认方法
 
+
+
+## 关于接口数组
+- 摘自：
+
+[java超基础-接口篇+多态数组（重要）_java 接口数组-CSDN博客](https://blog.csdn.net/SpongeBob_shouse/article/details/122549950)
+
+- 代码举例
+```package day04;
+public class InterfacePolyParameter {
+    public static void main(String[] args) {
+        //多态数组 因为这个数组里面放了 不同的类 接口类型数组
+       Usb[] usbs=new Usb[2];
+       usbs[0]=new Phone();
+       usbs[1]=new Camera();//既可以放不同类的实例
+        for (int i=0;i<usbs.length;i++){
+            usbs[i].work();//动态绑定
+            //1.我们要进行
+            if(usbs[i] instanceof Phone){//判断运行类型是什么 是phone我们就调用这个类型
+                ((Phone)usbs[i]).call();
+            }
+        }
+    }
+}
+interface Usb {
+    void work();
+}
+class Phone implements Usb{
+public void call(){
+    System.out.println("手机可以进行通话功能");
+}
+    @Override
+    public void work() {
+        System.out.println("手机工作中");
+    }
+}
+class Camera implements Usb{
+
+    @Override
+    public void work() {
+        System.out.println("相机工作中");
+    }
+}
+```
+
+
+> 由于接口多态可以让  `接口类型的变量可以指向实现了该接口的对象实例`
+
+### 为什么可以创建接口的数组
+在Java中，你不仅可以创建具体类的数组，也可以创建接口的数组。这是因为数组是一种容器，它能够存储指定类型的数据。当你声明一个接口的数组时，比如 Usb[] usbs = new Usb[2];，你实际上是声明了一个能够容纳任何实现了Usb接口的对象的数组。数组并不关心这些对象属于哪个具体的类，只要它们实现了指定的接口即可。
 
 
 
