--- a/_posts/2024-05-10-接口.md
+++ b/_posts/2024-05-10-接口.md
@@ -203,7 +203,7 @@ public class interTest {
 
 - 结果：
 
-![image-20240328231208413](/images/image-20240328231208413.png)
+![image-20240328231208413](../images/image-20240328231208413.png)
 
 
 
