--- a/_posts/2024-05-10-接口.md
+++ b/_posts/2024-05-10-接口.md
@@ -527,7 +527,8 @@ public class InterClass implements MyInterZi{
 [java超基础-接口篇+多态数组（重要）_java 接口数组-CSDN博客](https://blog.csdn.net/SpongeBob_shouse/article/details/122549950)
 
 - 代码举例
-```package day04;
+```java
+package day04;
 public class InterfacePolyParameter {
     public static void main(String[] args) {
         //多态数组 因为这个数组里面放了 不同的类 接口类型数组
@@ -563,6 +564,7 @@ class Camera implements Usb{
     }
 }
 ```
+
 
 
 > 由于接口多态可以让  `接口类型的变量可以指向实现了该接口的对象实例`
