大更新的更新

--- a/_posts/2024-05-13-Lambda表达式（JDK 8 开始）.md
+++ b/_posts/2024-05-13-Lambda表达式（JDK 8 开始）.md
@@ -1,4 +1,12 @@
-# Lambda表达式（JDK 8 开始）
+---
+layout: post
+title: Lambda表达式
+date: 2024-05-13 
+Author: a1fly
+tags: [sample, document]
+comments: true
+---
+
 
 - 可以用于简化匿名内部类的写法
 - 并且，Lambda表达式只能够简化函数式接口的匿名内部类的写法
