--- a/_posts/2024-05-13-Map接口的实现类的遍历方式.md
+++ b/_posts/2024-05-13-Map接口的实现类的遍历方式.md
@@ -1,4 +1,12 @@
-# Map接口的实现类的遍历方式
+---
+layout: post
+title: Map接口的实现类的遍历方式
+date: 2024-05-13 
+Author: a1fly
+tags: [sample, document]
+comments: true
+---
+
 
 ## 1 . 增强for
 
