--- a/_posts/2024-05-13-可变参数和不可变集合.md
+++ b/_posts/2024-05-13-可变参数和不可变集合.md
@@ -1,4 +1,12 @@
-# 可变参数和不可变集合
+---
+layout: post
+title: 可变参数和不可变集合
+date: 2024-05-13 
+Author: a1fly
+tags: [sample, document]
+comments: true
+---
+
 
 ## 可变参数
 
