--- a/_posts/2024-05-13-泛型.md
+++ b/_posts/2024-05-13-泛型.md
@@ -1,4 +1,11 @@
-# 泛型
+---
+layout: post
+title: 泛型
+date: 2024-05-13 
+Author: a1fly
+tags: [sample, document]
+comments: true
+---
 
 ## 泛型不具备继承结构
 
