--- a/_posts/2024-05-13-高级遍历.md
+++ b/_posts/2024-05-13-高级遍历.md
@@ -1,4 +1,11 @@
-# 高级遍历
+---
+layout: post
+title: 高级遍历
+date: 2024-05-13 
+Author: a1fly
+tags: [sample, document]
+comments: true
+---
 
 ## 基于Collection<>接口的遍历
 
