--- a/_posts/2024-05-13-匿名内部类.md
+++ b/_posts/2024-05-13-匿名内部类.md
@@ -1,4 +1,12 @@
-# 匿名内部类
+---
+layout: post
+title: 匿名内部类
+date: 2024-05-13 
+Author: a1fly
+tags: [sample, document]
+comments: true
+---
+
 
 ## 为什么要有
 
