--- a/_posts/2024-05-13-匿名内部类.md
+++ b/_posts/2024-05-13-匿名内部类.md
@@ -104,7 +104,7 @@ public class code1 {
 
 运行之后会发现，我明明只写了3个类文件，应该只有3个CLASS文件，可是却输出了5个CLASS文件
 
-![image-20240320112656029](/images/image-20240320112656029.png)
+![image-20240320112656029](../images/image-20240320112656029.png)
 
 对比可以发现多出了这两个CLASS文件
 
