--- a/_posts/2024-05-13-匿名内部类.md
+++ b/_posts/2024-05-13-匿名内部类.md
@@ -108,19 +108,19 @@ public class code1 {
 
 对比可以发现多出了这两个CLASS文件
 
-![image-20240320112745647](/images/image-20240320112745647.png)
+![image-20240320112745647](../images/image-20240320112745647.png)
 
 通过JDK自带的javap反编译这两个文件可以看到
 
 在code1$1.class中实际为：
 
-![image-20240320113613112](/images/image-20240320113613112.png)
+![image-20240320113613112](../images/image-20240320113613112.png)
 
 可以发现构造匿名内部类的对象实际上就是创建了一个类叫做code1$1.class，这个类实现了Swim接口
 
 在code1$2.class中同理：
 
-![image-20240320113851486](/images/image-20240320113851486.png)
+![image-20240320113851486](../images/image-20240320113851486.png)
 
 只不过是类code1$2.class继承于类Animal
 
@@ -152,7 +152,7 @@ new Animal(){
 
 此时可以调用hello()方法输出  “问好”  两个字，原因可以类比一下继承：
 
-![image-20240320132847554](/images/image-20240320132847554.png)
+![image-20240320132847554](../images/image-20240320132847554.png)
 
 可以看作一个类，继承了Animal，并且重写了方法，然后添加了自己的方法，此时我直接在后面使用 .hello()调用，代表使用这个类的hello()方法，因此可以调用
 
