--- a/_posts/2024-05-13-可变参数和不可变集合.md
+++ b/_posts/2024-05-13-可变参数和不可变集合.md
@@ -103,13 +103,13 @@ List<Integer> list = List.of(1,2,3,4,5,6,7);
 
 当我们使用`List.of`创建不可变集合时，观察参数类型为：
 
-![listof](\images\image-20240510164912224.png)
+![listof](../images/image-20240510164912224.png)
 
 发现是`类型...元素名`，是一个可变参数
 
 同时，我们观察`Map.ofEntries()`的参数：
 
-![MapEntrycanshu](\images\image-20240510170116275.png)
+![MapEntrycanshu](../images/image-20240510170116275.png)
 
 发现是也是这种形式的可变参数
 
