--- a/_posts/2024-05-13-可变参数和不可变集合.md
+++ b/_posts/2024-05-13-可变参数和不可变集合.md
@@ -65,14 +65,14 @@ List<Integer> list = List.of(1,2,3,4,5,6,7);
 
 调用时可以发现，如果输入个数是10个以内，就直接有，输入个数多了后就使用可变参数
 
-![不可变集合参数](\images\image-20240509205500799.png)
+![不可变集合参数](../images/image-20240509205500799.png)
 
 
 
 ### 特殊版 Map接口使用不可变集合
 
 在Map接口的实现类里面最多存放10对键值对
-![image-20240509212749685](\images\JavaStudyImage\image-20240509212749685.png)
+![image-20240509212749685](../images/JavaStudyImage\image-20240509212749685.png)
 
 
 
