--- a/_posts/2024-05-21-Stream流.md
+++ b/_posts/2024-05-21-Stream流.md
@@ -293,7 +293,7 @@ public class code3 {
 >
 > 因为观察静态方法`of`的参数，发现是一个可变参数，而可变参数的底层就是一个数组，于是使用`of`也是可以的
 >
-> ![streamof](E:\Java学习笔记\JavaStudyImage\image-20240510215742647.png)
+> ![streamof](..\images\image-20240510215742647.png)
 >
 > ## 为什么基本数据类型不能使用of
 >
