--- a/_posts/2024-05-21-Stream流.md
+++ b/_posts/2024-05-21-Stream流.md
@@ -330,7 +330,7 @@ public class code3 {
 >
 > 结果：
 >
-> ![streamofresult](E:\Java学习笔记\JavaStudyImage\image-20240510220544855.png)
+> ![streamofresult](..\images\image-20240510220544855.png)
 >
 > 
 >
