--- a/_posts/2024-05-21-Stream流.md
+++ b/_posts/2024-05-21-Stream流.md
@@ -358,7 +358,7 @@ public class code3 {
 >
 > 结果：
 >
-> <img src="E:\Java学习笔记\JavaStudyImage\image-20240510220732097.png" alt="streamofresult2" style="zoom:67%;" />
+> <img src="../images/image-20240510220732097.png" alt="streamofresult2" style="zoom:67%;" />
 >
 > 
 
